5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4185/executions/1630_2918.log
== TEST (2019-04-02 17:17:54) 
-- CODE:
float(input(20/100)
-- ERROR:
File "XXXX", line 2
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:18:18) 
-- CODE:
float(input(20/100
			 )
-- ERROR:
File "XXXX", line 3
    
         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:18:19) 
-- CODE:
float(input(20/100
			 )
-- EXECUTION TIME:
0.138197
-- ERROR:
  File "/home/codebench/codes/1630/2918/main.py", line 3
    
         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:38:32) 
-- CODE:
float(input(64.8 - (64.8*(20/100)))
-- ERROR:
File "XXXX", line 2
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:43:29) 
-- CODE:
var= float(input"valor")

-- ERROR:
File "XXXX", line 1
    var= float(input"valor")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:51:58) 
-- CODE:
var= float(input("valor"))
var2= float(input("quantidde"))

-- ERROR:
File "XXXX", line 1
    var= float(input"valor")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
